<resources>
    <string name="app_name">Turismo Sena</string>
    <string name="tab_text_sitios">Sitios</string>
    <string name="tab_text_operadores">Operadores</string>
    <string name="tab_text_hoteles">Hoteles</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Buscar</string>
    <string name="input_name">Nombre:</string>
    <string name="input_addres">Dirección:</string>
    <string name="input_local_phone">Teléfono:</string>
    <string name="input_mobile_phone">Celular:</string>
    <string name="input_web">Página web:</string>
    <string name="menu_delete">Eliminar</string>
    <string name="menu_cancelar">Cancelar</string>
    <string name="menu_edit">Editar</string>
    <string name="input_email">Email:</string>
    <string name="msg_required">Este campo es requerido.</string>
    <string name="Eliminar">Eliminar</string>
    <string name="delete_message">Esta seguro de eliminar %s de %s?</string>
    <string name="msg_user_email">Seleccione un cliente de correo:</string>
    <string name="find_placeholder">Buscar:</string>
</resources>
